Fix for overflowing code blocks

--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,7 @@ code {
 }
 
 pre {
+    overflow-x: auto;
     padding: 1em;
 }
 
